client/src/lib/search/antlr/AdvancedSearchParser.ts
// @ts-nocheck
/* eslint-disable */
// Generated by antlr-ng from AdvancedSearch.g4. Run `npm run generate:parser` to update.

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { AdvancedSearchListener } from "./AdvancedSearchListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export class AdvancedSearchParser extends antlr.Parser {
  public static readonly WORD = 1;
  public static readonly TEXT = 2;
  public static readonly DECIMAL = 3;
  public static readonly WHITESPACE = 4;
  public static readonly COLON = 5;
  public static readonly OPERATOR = 6;
  public static readonly OPENPARAN = 7;
  public static readonly CLOSEPARAN = 8;
  public static readonly RULE_nodeType = 0;
  public static readonly RULE_attributeSearch = 1;
  public static readonly RULE_attributeData = 2;
  public static readonly RULE_attribute = 3;
  public static readonly RULE_attributes = 4;
  public static readonly RULE_searchPart = 5;
  public static readonly RULE_search = 6;

  public static readonly literalNames = [];

  public static readonly symbolicNames = [
    null,
    "WORD",
    "TEXT",
    "DECIMAL",
    "WHITESPACE",
    "COLON",
    "OPERATOR",
    "OPENPARAN",
    "CLOSEPARAN",
  ];
  public static readonly ruleNames = [
    "nodeType",
    "attributeSearch",
    "attributeData",
    "attribute",
    "attributes",
    "searchPart",
    "search",
  ];

  public get grammarFileName(): string {
    return "AdvancedSearch.g4";
  }
  public get literalNames(): (string | null)[] {
    return AdvancedSearchParser.literalNames;
  }
  public get symbolicNames(): (string | null)[] {
    return AdvancedSearchParser.symbolicNames;
  }
  public get ruleNames(): string[] {
    return AdvancedSearchParser.ruleNames;
  }
  public get serializedATN(): number[] {
    return AdvancedSearchParser._serializedATN;
  }

  protected createFailedPredicateException(
    predicate?: string,
    message?: string,
  ): antlr.FailedPredicateException {
    return new antlr.FailedPredicateException(this, predicate, message);
  }

  public constructor(input: antlr.TokenStream) {
    super(input);
    this.interpreter = new antlr.ParserATNSimulator(
      this,
      AdvancedSearchParser._ATN,
      AdvancedSearchParser.decisionsToDFA,
      new antlr.PredictionContextCache(),
    );
  }
  public nodeType(): NodeTypeContext {
    let localContext = new NodeTypeContext(this.context, this.state);
    this.enterRule(localContext, 0, AdvancedSearchParser.RULE_nodeType);
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 14;
        this.match(AdvancedSearchParser.WORD);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public attributeSearch(): AttributeSearchContext {
    let localContext = new AttributeSearchContext(this.context, this.state);
    this.enterRule(localContext, 2, AdvancedSearchParser.RULE_attributeSearch);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 16;
        _la = this.tokenStream.LA(1);
        if (!(_la === 1 || _la === 2)) {
          this.errorHandler.recoverInline(this);
        } else {
          this.errorHandler.reportMatch(this);
          this.consume();
        }
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public attributeData(): AttributeDataContext {
    let localContext = new AttributeDataContext(this.context, this.state);
    this.enterRule(localContext, 4, AdvancedSearchParser.RULE_attributeData);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 18;
        _la = this.tokenStream.LA(1);
        if (!((_la & ~0x1f) === 0 && ((1 << _la) & 14) !== 0)) {
          this.errorHandler.recoverInline(this);
        } else {
          this.errorHandler.reportMatch(this);
          this.consume();
        }
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public attribute(): AttributeContext {
    let localContext = new AttributeContext(this.context, this.state);
    this.enterRule(localContext, 6, AdvancedSearchParser.RULE_attribute);
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 20;
        this.attributeSearch();
        this.state = 21;
        this.match(AdvancedSearchParser.OPERATOR);
        this.state = 22;
        this.attributeData();
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public attributes(): AttributesContext {
    let localContext = new AttributesContext(this.context, this.state);
    this.enterRule(localContext, 8, AdvancedSearchParser.RULE_attributes);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 26;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        do {
          {
            {
              this.state = 24;
              this.match(AdvancedSearchParser.WHITESPACE);
              this.state = 25;
              this.attribute();
            }
          }
          this.state = 28;
          this.errorHandler.sync(this);
          _la = this.tokenStream.LA(1);
        } while (_la === 4);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public searchPart(): SearchPartContext {
    let localContext = new SearchPartContext(this.context, this.state);
    this.enterRule(localContext, 10, AdvancedSearchParser.RULE_searchPart);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 30;
        this.nodeType();
        this.state = 33;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        if (_la === 5) {
          {
            this.state = 31;
            this.match(AdvancedSearchParser.COLON);
            this.state = 32;
            this.attributes();
          }
        }
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public search(): SearchContext {
    let localContext = new SearchContext(this.context, this.state);
    this.enterRule(localContext, 12, AdvancedSearchParser.RULE_search);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 38;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        while (_la === 1) {
          {
            {
              this.state = 35;
              this.searchPart();
            }
          }
          this.state = 40;
          this.errorHandler.sync(this);
          _la = this.tokenStream.LA(1);
        }
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }


  private static __ATN: antlr.ATN;
  public static get _ATN(): antlr.ATN {
    if (!AdvancedSearchParser.__ATN) {
      AdvancedSearchParser.__ATN = new antlr.ATNDeserializer().deserialize(
        AdvancedSearchParser._serializedATN,
      );
    }

    return AdvancedSearchParser.__ATN;
  }

  private static readonly vocabulary = new antlr.Vocabulary(
    AdvancedSearchParser.literalNames,
    AdvancedSearchParser.symbolicNames,
    [],
  );

  public override get vocabulary(): antlr.Vocabulary {
    return AdvancedSearchParser.vocabulary;
  }

  private static readonly decisionsToDFA =
    AdvancedSearchParser._ATN.decisionToState.map(
      (ds: antlr.DecisionState, index: number) => new antlr.DFA(ds, index),
    );
}

export class NodeTypeContext extends antlr.ParserRuleContext {
  public constructor(
    parent: antlr.ParserRuleContext | null,
    invokingState: number,
  ) {
    super(parent, invokingState);
  }
  public WORD(): antlr.TerminalNode {
    return this.getToken(AdvancedSearchParser.WORD, 0)!;
  }
  public override get ruleIndex(): number {
    return AdvancedSearchParser.RULE_nodeType;
  }
  public override enterRule(listener: AdvancedSearchListener): void {
    if (listener.enterNodeType) {
      listener.enterNodeType(this);
    }
  }
  public override exitRule(listener: AdvancedSearchListener): void {
    if (listener.exitNodeType) {
      listener.exitNodeType(this);
    }
  }
}

export class AttributeSearchContext extends antlr.ParserRuleContext {
  public constructor(
    parent: antlr.ParserRuleContext | null,
    invokingState: number,
  ) {
    super(parent, invokingState);
  }
  public WORD(): antlr.TerminalNode | null {
    return this.getToken(AdvancedSearchParser.WORD, 0);
  }
  public TEXT(): antlr.TerminalNode | null {
    return this.getToken(AdvancedSearchParser.TEXT, 0);
  }
  public override get ruleIndex(): number {
    return AdvancedSearchParser.RULE_attributeSearch;
  }
  public override enterRule(listener: AdvancedSearchListener): void {
    if (listener.enterAttributeSearch) {
      listener.enterAttributeSearch(this);
    }
  }
  public override exitRule(listener: AdvancedSearchListener): void {
    if (listener.exitAttributeSearch) {
      listener.exitAttributeSearch(this);
    }
  }
}

export class AttributeDataContext extends antlr.ParserRuleContext {
  public constructor(
    parent: antlr.ParserRuleContext | null,
    invokingState: number,
  ) {
    super(parent, invokingState);
  }
  public WORD(): antlr.TerminalNode | null {
    return this.getToken(AdvancedSearchParser.WORD, 0);
  }
  public TEXT(): antlr.TerminalNode | null {
    return this.getToken(AdvancedSearchParser.TEXT, 0);
  }
  public DECIMAL(): antlr.TerminalNode | null {
    return this.getToken(AdvancedSearchParser.DECIMAL, 0);
  }
  public override get ruleIndex(): number {
    return AdvancedSearchParser.RULE_attributeData;
  }
  public override enterRule(listener: AdvancedSearchListener): void {
    if (listener.enterAttributeData) {
      listener.enterAttributeData(this);
    }
  }
  public override exitRule(listener: AdvancedSearchListener): void {
    if (listener.exitAttributeData) {
      listener.exitAttributeData(this);
    }
  }
}

export class AttributeContext extends antlr.ParserRuleContext {
  public constructor(
    parent: antlr.ParserRuleContext | null,
    invokingState: number,
  ) {
    super(parent, invokingState);
  }
  public attributeSearch(): AttributeSearchContext {
    return this.getRuleContext(0, AttributeSearchContext)!;
  }
  public OPERATOR(): antlr.TerminalNode {
    return this.getToken(AdvancedSearchParser.OPERATOR, 0)!;
  }
  public attributeData(): AttributeDataContext {
    return this.getRuleContext(0, AttributeDataContext)!;
  }
  public override get ruleIndex(): number {
    return AdvancedSearchParser.RULE_attribute;
  }
  public override enterRule(listener: AdvancedSearchListener): void {
    if (listener.enterAttribute) {
      listener.enterAttribute(this);
    }
  }
  public override exitRule(listener: AdvancedSearchListener): void {
    if (listener.exitAttribute) {
      listener.exitAttribute(this);
    }
  }
}

export class AttributesContext extends antlr.ParserRuleContext {
  public constructor(
    parent: antlr.ParserRuleContext | null,
    invokingState: number,
  ) {
    super(parent, invokingState);
  }
  public WHITESPACE(): antlr.TerminalNode[];
  public WHITESPACE(i: number): antlr.TerminalNode | null;
  public WHITESPACE(
    i?: number,
  ): antlr.TerminalNode | null | antlr.TerminalNode[] {
    if (i === undefined) {
      return this.getTokens(AdvancedSearchParser.WHITESPACE);
    } else {
      return this.getToken(AdvancedSearchParser.WHITESPACE, i);
    }
  }
  public attribute(): AttributeContext[];
  public attribute(i: number): AttributeContext | null;
  public attribute(i?: number): AttributeContext[] | AttributeContext | null {
    if (i === undefined) {
      return this.getRuleContexts(AttributeContext);
    }

    return this.getRuleContext(i, AttributeContext);
  }
  public override get ruleIndex(): number {
    return AdvancedSearchParser.RULE_attributes;
  }
  public override enterRule(listener: AdvancedSearchListener): void {
    if (listener.enterAttributes) {
      listener.enterAttributes(this);
    }
  }
  public override exitRule(listener: AdvancedSearchListener): void {
    if (listener.exitAttributes) {
      listener.exitAttributes(this);
    }
  }
}

export class SearchPartContext extends antlr.ParserRuleContext {
  public constructor(
    parent: antlr.ParserRuleContext | null,
    invokingState: number,
  ) {
    super(parent, invokingState);
  }
  public nodeType(): NodeTypeContext {
    return this.getRuleContext(0, NodeTypeContext)!;
  }
  public COLON(): antlr.TerminalNode | null {
    return this.getToken(AdvancedSearchParser.COLON, 0);
  }
  public attributes(): AttributesContext | null {
    return this.getRuleContext(0, AttributesContext);
  }
  public override get ruleIndex(): number {
    return AdvancedSearchParser.RULE_searchPart;
  }
  public override enterRule(listener: AdvancedSearchListener): void {
    if (listener.enterSearchPart) {
      listener.enterSearchPart(this);
    }
  }
  public override exitRule(listener: AdvancedSearchListener): void {
    if (listener.exitSearchPart) {
      listener.exitSearchPart(this);
    }
  }
}

export class SearchContext extends antlr.ParserRuleContext {
  public constructor(
    parent: antlr.ParserRuleContext | null,
    invokingState: number,
  ) {
    super(parent, invokingState);
  }
  public searchPart(): SearchPartContext[];
  public searchPart(i: number): SearchPartContext | null;
  public searchPart(
    i?: number,
  ): SearchPartContext[] | SearchPartContext | null {
    if (i === undefined) {
      return this.getRuleContexts(SearchPartContext);
    }

    return this.getRuleContext(i, SearchPartContext);
  }
  public override get ruleIndex(): number {
    return AdvancedSearchParser.RULE_search;
  }
  public override enterRule(listener: AdvancedSearchListener): void {
    if (listener.enterSearch) {
      listener.enterSearch(this);
    }
  }
  public override exitRule(listener: AdvancedSearchListener): void {
    if (listener.exitSearch) {
      listener.exitSearch(this);
    }
  }
}
